--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="lesson.js"></script>
-    <script src="lesson1-2.js"></script>
+    <!--script src="lesson.js" type="module"></script>
+    <script src="lesson1-2.js" type="module"></script>
+    <script src="lesson1-3.js" type="module"></script>
+    <script src="lesson1-4.js" type="module"></script>-->
+    <script src="lesson1-5.js" type="module"></script>
   </body>
 </html>
