--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <script src="lesson1-3.js" type="module"></script>
     <script src="lesson1-4.js" type="module"></script>
     <script src="lesson1-5.js" type="module"></script>
-    <script src="lesson2-1.js" type="module"></script>-->
+    <script src="lesson2-1.js" type="module"></script>
     <script src="lesson2-2.js" type="module"></script>
+    <script src="lesson2-3.js" type="module"></script>
+    <script src="lesson2-4.js" type="module"></script>
+    <script src="lesson2-5.js" type="module"></script>
+    <script src="lesson2-6.js" type="module"></script>
+    <script src="lesson2-7.js" type="module"></script>-->
+    <script src="lesson2-8.js" type="module"></script>
   </body>
 </html>
