--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <script src="lesson2-4.js" type="module"></script>
     <script src="lesson2-5.js" type="module"></script>
     <script src="lesson2-6.js" type="module"></script>
-    <script src="lesson2-7.js" type="module"></script>-->
-    <script src="lesson2-8.js" type="module"></script>
+    <script src="lesson2-7.js" type="module"></script>
+    <script src="lesson2-8.js" type="module"></script>-->
+    <script src="lesson2-9.js"></script>
   </body>
 </html>
